# ksight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
.github/workflows/: MagicEyes.yml
cmake_support/clang/: README.md
cmake_support/gcc/aarch64/aarch64/: linux_debug.toolchain  linux_release.toolchain
cmake_support/gcc/aarch64/include/: linux_base.cmake
cmake_support/gcc/gcc-9/: README.md
cmake_support/gcc/include/: debug.cmake
doc/: learning_BPF.md
doc/网络组4.2会议文档/: 网络延迟诊断工具.md
doc/网络组4.2会议文档/张小航_周报/: delay_analysis-BCC代码.md
docs/: ToDo.md
docs/网络延迟/: tcp_timestamp.md
src/: CMakeLists.txt  HowToDo.md  cmd_parse.h  delay_analysis.bpf.c
src/backend/: CMakeLists.txt
src/backend/common_helper/: README.md
src/backend/fs/: CMakeLists.txt  README.md  vfsstat.c
src/backend/fs/fs_watcher/: CMakeLists.txt
src/backend/memory/: CMakeLists.txt  README.md  procstat.c  sysstat.c
src/backend/memory/mem_trace/: RAEDME.md
src/backend/memory/mem_watcher/: CMakeLists.txt  README.md
src/backend/memory/mem_watcher/bpf/: memleak.bpf.c  memory_compact.bpf.c  oomkill.bpf.c  paf.bpf.c  pr.bpf.c  procstat.bpf.c  sysstat.bpf.c
src/backend/memory/mem_watcher/docs/: learning_memory_management.md
src/backend/memory/mem_watcher/include/: mem_watcher.h
src/backend/memory/mem_watcher/src/: mem_watcher.c  oomkill.c  read_proc_mem.c
src/backend/net/: CMakeLists.txt  README.md  delay_analysis.c  get_timestamp.h
src/backend/net/delay_analysis/: CMakeLists.txt
src/backend/net/net_watcher/: CMakeLists.txt  netwatcher.c
src/backend/net/net_watcher/src/: netwatcher.c
src/backend/process/cpu_watcher/: CMakeLists.txt  cpu_watcher.c
src/backend/process/proc_image/: CMakeLists.txt  proc_image.c
src/bridge/: CMakeLists.txt  README.md
src/bridge/prometheus_bridge/: backend_manifest.json  http_server.py  main.py
src/bridge/prometheus_bridge/collector/fs/: vfsstat_collector.py
src/bridge/prometheus_bridge/collector/memory/: oomkill_collector.py
src/bridge/prometheus_bridge/collector/net/: nettrace_collector.py
src/bridge/prometheus_bridge/collector/process/: proc_image_collector.py
src/bridge/prometheus_bridge/examples/: vfsstat
src/bridge/prometheus_client/: backend_manifest.json  main.py  sqlite_handler.py
src/bridge/prometheus_client/collector/: vfsstat_collector.py
src/bridge/prometheus_client/collector/fs/: vfsstat_collector.py
src/magic_eyes_cli/: CMakeLists.txt  README.md  magic_eyes_cli
src/magic_eyes_cli/config/: README.md
src/magic_eyes_cli/core/: cli_arg_parser.py
src/magic_eyes_cli/src/: magic_eyes_cli.py
src/magic_eyes_cli/src/backend_tool_modules/: cpu_watcher.py
src/magic_eyes_cli/src/core/: cli_arg_parser.py  tool_module_index.py
src/magic_eyes_cli/src/utils/: arg_parse.py  filesystem.py  process.py  string_process.py
src/visualization/: README.md  run_images.sh
src/visualization/vscode_ext/: README.md
src/visualization/vscode_ext/lmp_ext_vscode/: package.json
src/visualization/vscode_ext/lmp_ext_vscode/src/: extension.ts
src/visualization/vscode_ext/tool_config_sample/: lmp_tool_ext_config.json
tools/arm64_deps/: README.md
tools/cmake/: FindBpfObject.cmake
